<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="image">start_image</string>
    <string name="restText">GET READY FOR:</string>
    <string name="exerciseText">EXERCISE NAME</string>
    <string name="start">START</string>
    <string name="timer">10</string>
    <string name="next_exercise">Next Exercise</string>
    <string name="exercise_preview">Exercise Preview</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="finishText">You have finish the 7 Minutes Workout</string>
    <string name="buttonFinish">FINISH</string>
    <string name="bmiOverweightPlus">Oops! You really need to take care of yourself.</string>
    <string name="bmiOverweightMinor">You are doing great, keep up!</string>
</resources>