<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:layout_gravity="center"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbFinish"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/white"
        app:titleTextColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/flFinish"
        />

    <TextView
        android:id="@+id/tvFinishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishText"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulations"
        />

    <FrameLayout
        android:id="@+id/flFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinishText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_ripple_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/buttonFinish"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>